--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2 class="number-12 w-fit absolute top-[3px] left-[134px] font-bold text-2xl">12</h2>
                 <div class="dot w-4 h-4 rounded-full bg-black relative top-[140px] left-[137px] font-bold text-2xl">
                     <div class="hour_time absolute rounded-[200px] w-4 h-[120px] bg-black"></div>
+                    <div class="minute_time absolute rounded-[200px] w-4 h-[100px] bg-red-200"></div>
                     <div class="second_time absolute rounded-[200px] w-4 h-[80px] bg-red-600"></div>
                 </div>
             </div>
