set up the function for updating the clock

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <h2 class="number-10 w-fit absolute top-20 left-6 font-bold text-2xl">10</h2>
                 <h2 class="number-11 w-fit absolute top-10 left-16 font-bold text-2xl">11</h2>
                 <h2 class="number-12 w-fit absolute top-[3px] left-[134px] font-bold text-2xl">12</h2>
-                <div class="dot w-4 h-4 rounded-full bg-black relative top-[140px] left-[137px] font-bold text-2xl">
-                    <div class="hour_time absolute rounded-[200px] w-4 h-[120px] bg-black"></div>
-                    <div class="minute_time absolute rounded-[200px] w-4 h-[100px] bg-red-200"></div>
-                    <div class="second_time absolute rounded-[200px] w-4 h-[80px] bg-red-600"></div>
+                <div class="dot w-4 h-4 rounded-full bg-black relative top-[140px] left-[137px] font-bold text-2xl z-0">
+                    <div class="hour_time absolute rounded-[200px] w-4 h-[120px] bg-black bottom-1 left-1/2 origin-bottom z-40"></div>
+                    <div class="minute_time absolute rounded-[200px] w-4 h-[100px] bg-red-200 bottom-1 origin-bottom z-0"></div>
+                    <div class="second_time absolute rounded-[200px] w-4 h-[80px] bg-red-600 bottom-1 origin-bottom z-0"></div>
                 </div>
             </div>
         </div>
